@@ -2,6 +2,7 @@ function ver = version
 %TB.VERSION     Return the version of TimeBox
 %   Release dates:
 %
+%   0.11.9 - Planned
 %   0.11.8 - Apr-21-2016
 %   0.10.7 - Mar-18-2016
 %   0.10.6 - Mar-04-2016
@@ -13,7 +14,7 @@ function ver = version
 ver = struct;
 ver.major = 0;                               % major version: increase with "big" changes
 ver.minor = 11;                              % minor version: increase with bug fixes and "small" new functionalities
-ver.release = 8;                             % release number: increase at every release
+ver.release = 9;                             % release number: increase at every release
 ver.releasedatenum = datenum(2016, 04, 21);  % date number value for the date of the last stable release
-ver.special = '';                            % set flags for particular versions
+ver.special = 'alpha';                       % set flags for particular versions
 end
