@@ -4,8 +4,7 @@ function [trainsax, testsax] = sax(train, test, options)
 %   data set DS, using integers 1, 2, 3, ... to index the symbols 'a', 'b',
 %   'c', .... 
 %
-%   DSX = SAX(DS,OPTS) does the same, but takes options from OPTS instead
-%   of using default values.
+%   DSX = SAX(DS,OPTS) does the same, but takes options from OPTS.
 %
 %   [TRAINX,TESTX] = SAX(TRAIN,TEST,...) transforms both the training and
 %   the test data set.
@@ -13,12 +12,15 @@ function [trainsax, testsax] = sax(train, test, options)
 %   Options:
 %       sax::alphabet size          (default: 4)
 %       sax::segmenting function    (default: @transform.paa)
-%       sax::cut function           (default: @transform.sax.bell)
+%       sax::cut function           (DEPRECATED)
 %
-%   This function invokes the segmenting function and the cut function
-%   without specifying any options. Unless options are specified by the
-%   caller, those functions will use default values.
-
+%   This function assumes the time series to be Z-normalized (approximately
+%   standard normal).
+%
+%   This implements the Time Series representation proposed in the
+%   paper: Jessica Lin, Eamonn Keogh,  Li Wei, and Stefano Leonardi.
+%   "Experiencing SAX: a novel symbolic representation of time series". In:
+%   Data Mining and Knowledge Discovery, Springer US, 2007, 15, 107-144.
 if ~exist('options', 'var')
     if exist('test', 'var') && opts.isa(test)
         options = test;
@@ -29,22 +31,19 @@ if ~exist('options', 'var')
 end
 
 segfun = opts.get(options, 'sax::segmenting function', @transform.paa);
-cutter = opts.get(options, 'sax::cut function', @transform.sax.bell);
+cutter = opts.get(options, 'sax::cut function', @getbreakpoints);
+if opts.has(options, 'sax::cut function')
+    warning('transform:sax', 'The option "sax::cut function" is obsolete and will be removed in the future.');
+end
 
 % Do we have a test dataset?
 testds = exist('test', 'var');
 
-% Z-norm it
-trainz = ts.znorm(train);
-if testds
-    testz = ts.znorm(test);
-end
-
 % Get it segmented
 if testds
-    [trains, tests] = segfun(trainz, testz, options);
+    [trains, tests] = segfun(train, test, options);
 else
-    trains = segfun(trainz, options);
+    trains = segfun(train, options);
 end
 
 % Get the cutpoints
@@ -74,4 +73,41 @@ sax = arrayfun(@(x)(sum(x >= cutp)), data);
 
 % Add classes back to SAX info
 out = ts.addclasses(classes, sax);
+end
+
+
+
+function [train, test] = getbreakpoints(~, arg2, arg3)
+%Return breakpoints mimicing the functionality of TRANSFORM.SAX.BELL
+if exist('arg3', 'var')
+    option = arg3;
+elseif exist('arg2', 'var') && opts.isa(arg2)
+    option = arg2;
+    clear arg2;
+else
+    option = opts.empty();
+end
+has_test = exist('arg2', 'var');
+
+
+alpha_size = opts.get(option, 'sax::alphabet size', 4);
+
+switch alpha_size
+        case 2, cutp  = [-inf 0];
+        case 3, cutp  = [-inf -0.43 0.43];
+        case 4, cutp  = [-inf -0.67 0 0.67];
+        case 5, cutp  = [-inf -0.84 -0.25 0.25 0.84];
+        case 6, cutp  = [-inf -0.97 -0.43 0 0.43 0.97];
+        case 7, cutp  = [-inf -1.07 -0.57 -0.18 0.18 0.57 1.07];
+        case 8, cutp  = [-inf -1.15 -0.67 -0.32 0 0.32 0.67 1.15];
+        case 9, cutp  = [-inf -1.22 -0.76 -0.43 -0.14 0.14 0.43 0.76 1.22];
+        case 10, cutp = [-inf -1.28 -0.84 -0.52 -0.25 0. 0.25 0.52 0.84 1.28];
+        case 11, cutp = [-inf -1.34 -0.91 -0.6 -0.35 -0.11 0.11 0.35 0.6 0.91 1.34];
+        case 12, cutp = [-inf -1.38 -0.97 -0.67 -0.43 -0.21 0 0.21 0.43 0.67 0.97 1.38];
+end
+
+train = cutp;
+if has_test
+    test = cutp;
+end
 end
